--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   speech_to_text: ^7.1.0
+  http: ^1.4.0
+  flutter_tts: ^4.2.3
+  animate_do: ^4.2.0
 
 dev_dependencies:
   flutter_test:
